prerequisites/sfpowerscripts-artifact/force-app/main/default/objects/SfpowerscriptsArtifact2__c/SfpowerscriptsArtifact2__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Sfpowerscripts artifacts installed in the org</description>
    <label>Sfpowerscripts Artifact 2</label>
</CustomObject>