prerequisites/sfpowerscripts-artifact/force-app/main/default/objects/SfpowerscriptsArtifact2__c/fields/CommitId__c.field-meta.xml
<CustomField>
    <fullName>CommitId__c</fullName>
    <description>Git commit ID from which artifact was created</description>
    <label>Commit Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>