prerequisites/sfpowerscripts-artifact/force-app/main/default/objects/SfpowerscriptsArtifact2__c/fields/Tag__c.field-meta.xml
<CustomField>
    <fullName>Tag__c</fullName>
    <description>Git tag of artifact</description>
    <label>Tag</label>
    <length>100</length>
    <type>Text</type>
</CustomField>