prerequisites/sfpowerscripts-artifact/force-app/main/default/objects/SfpowerscriptsArtifact2__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <description>Version number of artifact</description>
    <label>Version</label>
    <length>50</length>
    <type>Text</type>
</CustomField>